# turuncu-randevu

./: .dockerignore  .gitignore  Dockerfile  README.md  design_guidelines.json  render.yaml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/: __init__.py  admin.py  appointments.py  auth_customer.py  auth_owner.py  auth_staff.py  availability.py  businesses.py  employees.py  me.py  sectors.py  stations.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260523_0001_initial_schema.py  20260524_0002_rls_policies.py  20260601_0003_staff_station_ids.py  20260604_0004_reminder_email.py  20260607_0005_admin_rls.py
backend/app/mail/: mailer.py
backend/app/models/: __init__.py  appointment.py  appointment_event.py  pending_customer.py  sector.py  service.py  session.py  sms_log.py  sms_reminder.py  staff_user.py  station.py  tenant.py  user.py
backend/app/schemas/: appointment.py  auth.py  business.py  common.py  employee.py  station.py
backend/app/security/: admin_token.py  otp.py  passwords.py  phones.py  tokens.py
backend/app/services/: seed.py  slots.py
backend/app/sms/: netgsm.py  reminders.py  vatansms.py
frontend/: README.md
frontend/public/: index.html  manifest-kiosk.webmanifest  manifest.webmanifest  offline.html  sw.js
frontend/public/admin/: login.html  panel.html
frontend/public/css/: theme.css
memory/: PRD.md
scripts/: smoke.sh
(+28 files in other folders)
