[project]
name = "turuncu-randevu-api"
version = "0.1.0"
description = "Turuncu Randevu — multi-tenant appointment system (FastAPI + Supabase Postgres)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "cryptography>=42.0.8",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
